# klrepo

./: .gitattributes  README.md
.github/: README.md  copyright.md  pull_request_template.md
.github/examples/: awesome.md
.issues/: README.md
.todo/: README.md  bilibili.md  target.md  toolchain.md
assets/: README.md
assets/staging/: README.md
c++/: README.md
c++/cpproj/lib/: CMakeLists.txt
c++/cpproj/tests/: CMakeLists.txt
c++/template/: .clang-format  .clang-tidy  CMakeLists.txt
c++/template/src/: CMakeLists.txt
c++/toolchain/cmake/: README.md
c++/toolchain/cmake/docs/: variables.md
computer-science/design-patterns/: SOLID.md
computer-science/programming-languages/: overview.md  overview2.md
containerization/kubernetes/: kubernetes.md
docker/: README.md
editors/: README.md
editors/vim/: README.md
editors/vim/docs/: commands.md  markers.md  marks.md  modes.md  motions.md  objects.md  operators.md  registers.md  registers2.md  scope.md  text_objects.md  windows_tabs.md
editors/vim/src/: motions.md  registers.md
embedded/mcs51/: RAM.md  design_philosophy.md  low_level.md  sfr.md
embedded/mcs51/docs/: addressing.md  design_philosophy.md  low_level.md  notify.md  regx52.h.md  sfr.md
embedded/mcs51/docs/lib/: reg51.h.md  sbit.md  sfr_sbit.md
embedded/mcs51/lib/: no_lib.md
embedded/stm32/rust/pacs/: generate-all.md
embedded/stm32/rust/stm32f1/: dependencies.md
embedded/stm32/rust/workspace/: build.rs.md
embedded/stm32f1/cpp/hal/: EXTI-RCC-PWR.md  fatal.md
embedded/stm32f1/rust/stm32f103c8t6/: build_share.rs
embedded/toolchain/: todo.md
embedded/toolchain/cmake/: commands.md  output.md  variables.md
embedded/toolchain/openocd/: openocd.md
embedded/toolchain/probe-rs/: probe-rs2.md  probe-rs3.md
embeded/: README.md
embeded/cpp-embedded/mcs51/docs/: regx52.h.md
embeded/mcs51/: RAM
embeded/mcs51/AT89C51/: hardware.md  reg51.h.md  reg51.md
embeded/mcs51/docs/: notify.md  reg52.h.md  registers.md
embeded/rust-embedded/docs/pacs/: overview.md
embeded/rust-embedded/docs/stm32f1/: pac-dev.md
embeded/stm32f1/cpp/hal/: DAC-DMA-CAN.md  stm32f10x.h.md
embeded/stm32f1/rs/stm32f103-tutorial/: README.md
embeded/toolchain/cmake/: commands.md  output.md
embeded/toolchain/probe-rs/: probe-rs2.md
essay/: psychological_types.md  self  self.md
essay/shortcut-key/: browser.md
front-end/css/docs/: css.md
front-end/html/docs/: html.md  html2.md
front-end/proj/njit-april/: index.html
front-end/proj/njit-new-year/: index.html  index.vsb.css
front-end/toolchain/bun/: guide.md  overview.md
front-end/toolchain/npm/: guide.md
front-end/toolchain/vite/: guide.md
front-end/typescript/docs/: typescript.md  typesystem.md
git/: README.md
git/src/: semver.md
guitar/music-theory/: basic.md  basic2.md
guitar/playing-skills/: finger.md
languages/: README.md
languages/json/: .json.md
languages/markdown/: .md.md
languages/mermaid/: .mmd.md
languages/programming_languages/: overview.md  overview2.md
languages/toml/: .toml.md
languages/xml/: .xml.md
languages/yaml/: .yaml.md
linux/: README.md
linux/docs/: INDEX.md  README.md
linux/docs/commands/: CHEAT-SHEET.md  INDEX.md  README.md
linux/docs/development/: README.md
linux/docs/filesystem/: README.md
linux/docs/fundamentals/: README.md  introduction.md
linux/docs/kernel/: README.md  device-drivers.md  kernel-architecture.md  kernel-debugging.md  kernel-modules.md  system-calls.md
linux/docs/networking/: README.md
linux/docs/performance/: README.md
linux/docs/security/: README.md
linux/docs/system-administration/: README.md
linux/docs/troubleshooting/: README.md
linux/nix/: README.md
linux/nix/docs/: README.md
linux/nix/guide/: examples.md  nixlang.md  nixlang2.md  summary.md
linux/wsl/: wsl.md
memorandum/: README.md
python/docs/: fp.md  obj.md  obj2.md  oop.md  python.md
rust/: README.md
rust/rust-embedded/stm32f103c8t6/: Cargo.toml  memory.x
rust/rust-embedded/stm32f103c8t6/.cargo/: config.toml
rust/rust-embedded/stm32f103c8t6/docs/: muc-info.md
rust/rust-tools/cargo/: binutils.md  cargo.md  cargo.toml.md  commands.md  crates.md  features-dep.md  plug-in.md  workspace.md
rust/rust-tools/rustup/: components.md  rustup.md
rust/rust-workspace/: cargo.toml
rust/rust-workspace/.cargo/: config.toml
rust/rust-workspace/benches/: ws_bench1.rs  ws_bench2.rs
rust/rust-workspace/docs/: guide.md  use.md
rust/rust-workspace/examples/:  ws_example1.rs   ws_example2.rs  ws_example2.rs
rust/rust-workspace/tests/: ws_test1.rs  ws_test2.rs
rust/rustlang/: Cargo.toml
rust/rustlang/.cargo/: config.toml
rust/rustlang/crates/asynchronous/: Cargo.toml
rust/rustlang/crates/asynchronous/docs/: overview.md
rust/rustlang/crates/attributes/docs/: attributes.md
rust/rustlang/crates/attributes/src/: main.rs
rust/rustlang/crates/design-pattern/: Cargo.toml
rust/rustlang/crates/generics/: Cargo.toml
rust/rustlang/crates/generics/docs/: impl.md  single.md  traits.md
rust/rustlang/crates/generics/src/: impl.rs  main.rs
rust/rustlang/crates/traits/docs/: deref
rust/rustlang/crates/traits/src/: main.rs
rust/rustlang/docs/: workspace--help.md
rust/rustlang/docs/ownership/: partical-move-rules.md  partical-move.md
rust/toolchain/cargo/: binutils.md  cargo.md  cargo.toml.md  features-dep.md  features.md  features2.md  plug-in.md
rust/toolchain/rustup/: components.md  rustup.md
rustlang/crates/turbofish/: Cargo.toml
todo/: README.md  basic.md  basic2.md  summer.md
toolchain/: README.md
toolchain/cmake/src/: commands.md  target.md  variables.md
toolchain/openocd/: openocd.md
toolchain/probe-rs/: probe-rs.md  probe-rs2.md  probe-rs3.md
vi/: README.md
vi/src/: commands.md  marks.md  modes.md  operators.md  registers.md  text_objects.md  windows_tabs.md
workflow/actions/github/: key_words.md  overview.md  quick_start.md
workflow/cosmic/: keybind.md
workflow/git/: confict.md  confict2.md  conflict3.md  semver.md  workflow.md
workflow/github-actions/: overview.md
(+139 files in other folders)
